--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -25,44 +26,97 @@
     <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
     <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 
-    <link href="css/style.css" rel="stylesheet">
-
     <title>Leo Navarro</title>
+
+    <!-- ESTILOS -->
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
+
 <body>
 
-    <!--NavBar-->
-    <nav class="navbar navbar-expand-lg fixed-top animation-opacity" id="nav">
-        <div class="container">
-            <ion-icon name="code-outline" class="margin-icon-nav size-icon-nav"></ion-icon>
-            <a class="navbar-brand" href="#opacity" id="principio">Intro Portafolio</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <ion-icon name="menu-outline"></ion-icon>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#segundo" id="sobre_mi">Sobre Mi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#tercero" id="servicios">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#cuarto" id="portafolio">Portafolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#sexto" id="contacto">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <section id="uno">
-        <div></div>
-    </section>
+    <header id="header">
+        <nav class="navbar navbar-expand-lg fixed-top animation-opacity" id="nav">
+            <div class="container">
+                <ion-icon name="code-outline" class="margin-icon-nav size-icon-nav"></ion-icon>
+                <a class="navbar-brand" href="#opacity" id="principio">Intro Portafolio</a>
+                <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </button>
     
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#segundo" id="sobre_mi">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#tercero" id="servicios">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#cuarto" id="portafolio">Portafolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#sexto" id="contacto">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section>
+        <img src="./images/fondo_muneca.png" alt="fondo" id="fondo">
+        <img src="./images/fondo_transparente.png" alt="fondo" id="fondo">
+        <h2 id="slogan">Portafolio Web</h2>
+        <a href="#" id="btn">Empecemos</a>
+    </section>
+
+    <div class="sec">
+        <h2>Lorem ipsum dolor sit amet</h2>
+        <h3>Lorem ipsum dolor</h3>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada condimentum odio non condimentum.
+            Vestibulum hendrerit condimentum vehicula. Quisque facilisis magna ut nulla euismod, ac placerat augue
+            sollicitudin. Suspendisse rutrum ipsum nisi, luctus sollicitudin erat varius et. In luctus ut orci non
+            imperdiet. Vivamus vel molestie enim. Vestibulum iaculis, mauris quis tristique posuere, mi justo feugiat
+            elit, vitae tempor lectus velit in ante. Nam auctor condimentum odio, id tincidunt quam iaculis sit amet.
+            Cras placerat urna scelerisque est elementum venenatis. Nullam lorem enim, elementum ac mattis tincidunt,
+            convallis ut tellus. Suspendisse potenti. Morbi rhoncus, libero at suscipit facilisis, dui quam pellentesque
+            lacus, vel lacinia mi nunc et ipsum. Sed vulputate eu augue eu suscipit. Donec congue facilisis luctus. Ut
+            tempor in dolor egestas lobortis. Phasellus non dui ante.
+            <br> <br>
+            Sed rutrum et metus quis tincidunt. Mauris in nisi nec nulla dictum suscipit non sed ante. Ut a dui lacus.
+            Ut lacinia, orci ut finibus aliquam, diam arcu condimentum nunc, a gravida nisl nisl quis est. Vivamus metus
+            eros, maximus sit amet lacinia quis, laoreet a lorem. Phasellus eget nulla dictum, mollis eros vitae,
+            accumsan tellus. Donec blandit sapien quis augue sodales scelerisque. Quisque feugiat mauris massa, eget
+            placerat mauris pharetra sit amet. Morbi non vehicula enim.
+            <br> <br>
+            Mauris fringilla erat dignissim feugiat mattis. Nunc consequat leo ut nulla facilisis pellentesque sed id
+            diam. Duis non quam urna. Cras non metus posuere, porttitor mauris tempus, ultrices ipsum. Maecenas
+            porttitor felis ac justo dignissim, eget faucibus sapien ultricies. Mauris tempus risus sit amet semper
+            tempor. Praesent luctus aliquet tortor non consectetur. Suspendisse eros mauris, tincidunt sit amet enim
+            non, dictum dignissim felis. Pellentesque venenatis ante nec justo ullamcorper, ut aliquet eros sodales.
+            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti.
+            <br> <br>
+            Ut vitae lacus aliquam mi sagittis tempor. Pellentesque ac pulvinar ex, at molestie nisl. Quisque commodo
+            eleifend ipsum, et mattis felis pharetra a. Aliquam non dictum dui, eget porta odio. Sed convallis sagittis
+            nisl, sit amet tristique nisi accumsan sit amet. In vehicula ante gravida neque mollis gravida. Cras euismod
+            urna sed odio porttitor, varius fermentum justo pretium. Fusce diam erat, pretium eget pharetra finibus,
+            pretium vitae neque. Etiam rutrum eu diam at placerat. Cras venenatis tortor ut metus iaculis, et dapibus
+            enim blandit. Praesent eu massa leo. Proin ligula justo, fermentum dictum tincidunt vitae, tempor et metus.
+            <br> <br>
+            Vestibulum at ullamcorper orci. Nulla sit amet dolor non nulla sagittis bibendum eget vitae nibh.
+            Suspendisse nunc mauris, convallis vitae malesuada in, blandit vitae enim. Integer consequat sapien sit amet
+            dictum auctor. Vestibulum molestie massa sit amet hendrerit placerat. Interdum et malesuada fames ac ante
+            ipsum primis in faucibus. Nam nec tellus a urna imperdiet mollis. Nulla eu congue orci. Aliquam suscipit dui
+            lorem, ut facilisis sem aliquam sed. Cras at nunc quis augue sollicitudin sagittis. Ut faucibus feugiat nibh
+            nec euismod. Vestibulum sollicitudin tempus sem non feugiat.
+        </p>
+    </div>
+
+    <!-- SCRIPT -->
+    <script src="./js/script.js"></script>
 </body>
+
 </html>
