--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -23,8 +25,7 @@
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 
     <!--VideoJS-->
-    <link href="https://vjs.zencdn.net/7.8.4/video-js.css" rel="stylesheet" />
-    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet" />
 
     <title>Leo Navarro</title>
 
@@ -65,58 +66,226 @@
         </nav>
     </header>
 
+    <!--seccion 1-->
+
     <section>
-        <img src="./images/fondo_muneca.png" alt="fondo" id="fondo">
-        <img src="./images/fondo_transparente.png" alt="fondo" id="fondo">
+        <img src="./images/fondo_transparente.png">
+        <img src="./images/muñeca_final_transparente.png" alt="fondo" id="fondo">
+        <img src="./images/particulas_fondo_transparente.png" alt="fondo" id="fondoParticulas">
+        <img src="./images/fondo_transparente.png">
         <h2 id="slogan">Portafolio Web</h2>
+        <hr id="raya-titulo" class="raya" />
         <a href="#" id="btn">Empecemos</a>
     </section>
 
-    <div class="sec">
-        <h2>Lorem ipsum dolor sit amet</h2>
-        <h3>Lorem ipsum dolor</h3>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada condimentum odio non condimentum.
-            Vestibulum hendrerit condimentum vehicula. Quisque facilisis magna ut nulla euismod, ac placerat augue
-            sollicitudin. Suspendisse rutrum ipsum nisi, luctus sollicitudin erat varius et. In luctus ut orci non
-            imperdiet. Vivamus vel molestie enim. Vestibulum iaculis, mauris quis tristique posuere, mi justo feugiat
-            elit, vitae tempor lectus velit in ante. Nam auctor condimentum odio, id tincidunt quam iaculis sit amet.
-            Cras placerat urna scelerisque est elementum venenatis. Nullam lorem enim, elementum ac mattis tincidunt,
-            convallis ut tellus. Suspendisse potenti. Morbi rhoncus, libero at suscipit facilisis, dui quam pellentesque
-            lacus, vel lacinia mi nunc et ipsum. Sed vulputate eu augue eu suscipit. Donec congue facilisis luctus. Ut
-            tempor in dolor egestas lobortis. Phasellus non dui ante.
-            <br> <br>
-            Sed rutrum et metus quis tincidunt. Mauris in nisi nec nulla dictum suscipit non sed ante. Ut a dui lacus.
-            Ut lacinia, orci ut finibus aliquam, diam arcu condimentum nunc, a gravida nisl nisl quis est. Vivamus metus
-            eros, maximus sit amet lacinia quis, laoreet a lorem. Phasellus eget nulla dictum, mollis eros vitae,
-            accumsan tellus. Donec blandit sapien quis augue sodales scelerisque. Quisque feugiat mauris massa, eget
-            placerat mauris pharetra sit amet. Morbi non vehicula enim.
-            <br> <br>
-            Mauris fringilla erat dignissim feugiat mattis. Nunc consequat leo ut nulla facilisis pellentesque sed id
-            diam. Duis non quam urna. Cras non metus posuere, porttitor mauris tempus, ultrices ipsum. Maecenas
-            porttitor felis ac justo dignissim, eget faucibus sapien ultricies. Mauris tempus risus sit amet semper
-            tempor. Praesent luctus aliquet tortor non consectetur. Suspendisse eros mauris, tincidunt sit amet enim
-            non, dictum dignissim felis. Pellentesque venenatis ante nec justo ullamcorper, ut aliquet eros sodales.
-            Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse potenti.
-            <br> <br>
-            Ut vitae lacus aliquam mi sagittis tempor. Pellentesque ac pulvinar ex, at molestie nisl. Quisque commodo
-            eleifend ipsum, et mattis felis pharetra a. Aliquam non dictum dui, eget porta odio. Sed convallis sagittis
-            nisl, sit amet tristique nisi accumsan sit amet. In vehicula ante gravida neque mollis gravida. Cras euismod
-            urna sed odio porttitor, varius fermentum justo pretium. Fusce diam erat, pretium eget pharetra finibus,
-            pretium vitae neque. Etiam rutrum eu diam at placerat. Cras venenatis tortor ut metus iaculis, et dapibus
-            enim blandit. Praesent eu massa leo. Proin ligula justo, fermentum dictum tincidunt vitae, tempor et metus.
-            <br> <br>
-            Vestibulum at ullamcorper orci. Nulla sit amet dolor non nulla sagittis bibendum eget vitae nibh.
-            Suspendisse nunc mauris, convallis vitae malesuada in, blandit vitae enim. Integer consequat sapien sit amet
-            dictum auctor. Vestibulum molestie massa sit amet hendrerit placerat. Interdum et malesuada fames ac ante
-            ipsum primis in faucibus. Nam nec tellus a urna imperdiet mollis. Nulla eu congue orci. Aliquam suscipit dui
-            lorem, ut facilisis sem aliquam sed. Cras at nunc quis augue sollicitudin sagittis. Ut faucibus feugiat nibh
-            nec euismod. Vestibulum sollicitudin tempus sem non feugiat.
-        </p>
+    <div class="sec text-center justify-content-center aling-self-center" style="padding-top: 300px; padding-bottom: 400px;" >
+            <h3 id="sobremi">Sobre mi</h3>
+            <hr id="sobremi2" class="raya"/>
+            <br>
+            <p id="sobremi3" style="padding-left: 200px; padding-right: 200px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus malesuada condimentum odio non condimentum.
+                Vestibulum hendrerit condimentum vehicula. Quisque facilisis magna ut nulla euismod, ac placerat augue
+                sollicitudin. 
+            </p>
+    </div>
+
+    <img src="/images/wave.png">
+
+    <!--seccion 2-->
+
+    <div class="sec2">
+
+        <!--slot 0-->
+
+        <div class="slot0">
+            <h3 style="font-size: 2.5vw;
+            color: #1751a4;">Servicios</h3>
+            <hr class="raya2"/>
+        </div>
+
+        <!--slot 1-->
+
+        <div class="slot1 posicion-itachi text-center">
+            <div class="posicion-itachi" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" id="itachi">
+                <!--data-tilt-glare data-tilt-max-glare="0.2"-->
+                <img class="tamano" src="./images/itachi_oficial_cortado.png" alt="fondo" id="Itachi">
+                <div class="tarjeta-itachi sombra-tarjeta">
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                </div>
+            </div>
+        </div>
+
+        <!--slot 2-->
+
+        <div class="slot2 text-center">
+            <div class="slotj1">
+                <div class="card sombra-tarjeta" style="width: 22rem;" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
+                    <ion-icon name="code" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
+                    <div class="card-body">
+                      <h5 class="card-title efecto-3d">Card title</h5>
+                      <p class="card-text efecto-3d">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary efecto-3d">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="slotj2">
+                <div class="card sombra-tarjeta" style="width: 22rem;" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
+                    <ion-icon name="game-controller" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="slotj3" >
+                <div class="card sombra-tarjeta" style="width: 22rem;" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
+                    <ion-icon name="analytics" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="slotj4" >
+                <div class="card sombra-tarjeta" style="width: 22rem;" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" data-tilt-glare data-tilt-max-glare="0.2">
+                    <ion-icon name="color-palette" class="card-img-top tamano-iconos efecto-3d pt-2" alt="..."></ion-icon>
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+            </div>
+        </div>
+    </div>
+
+    <style>  
+        .swiper {
+          width: 100%;
+          padding-top: 100px;
+          padding-bottom: 100px;
+        }
+  
+        .swiper-slide {
+          background-position: center;
+          background-size: cover;
+          width: 900px;
+          height: 450px;
+        }
+  
+        .swiper-slide img {
+          display: block;
+          width: 100%;
+        }
+      </style>
+
+    <img src="/images/raya-gris.png">
+  
+    <div class="sec3">
+        <!-- Swiper -->
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/fondo_muneca.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/itachivolumetrico.png" />
+          </div>
+          <div class="swiper-slide">
+            <video
+                id="my-video"
+                class="video-js"
+                controls
+                preload="auto"
+                width="1000"
+                height="500"
+                poster="/images/portafolio-img/itachiultimo1.png"
+                data-setup="{}"
+                >
+                <source src="/images/portafolio-video/itachiVideo.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a
+                >
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/interfaz1.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/interfaz4.png" />
+          </div>
+          
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+    </div>
+
+    <div class="sec4" style="padding-top: 100px;">
+        <div class="slotm0">
+            <h3 style="font-size: 2.5vw; color: #1751a4; text-align: center;">Contacto</h3>
+            <hr class="raya3"/>
+        </div>
+        <div class="slotm1">
+            <ion-icon name="call" class="card-img-top tamano-iconos" alt="..."></ion-icon>
+            <p style="padding: 8px; text-align: center; font-weight: bold;">+57 (300) 299-8195</p>
+        </div>
+        <div class="slotm2">
+            <ion-icon name="mail" class="card-img-top tamano-iconos" alt="..."></ion-icon>
+            <p style="padding: 8px; text-align: center; font-weight: bold;">leonavarro1197@gmail.com</p>
+        </div>
+        <div class="slotm3">
+            <ion-icon name="logo-instagram" class="card-img-top tamano-iconos" alt="..."></ion-icon>
+            <p style="padding: 8px; text-align: center; font-weight: bold;">leonardonavarro333</p>
+        </div>
+    </div>
+
+    <div class="sec5" style="background-color: #1751a4; padding-top: 10px;">
+        <p style="font-size: 12px; color: white; text-align: center;">Copyright© Portafolio Web Leonardo Navarro</p>
     </div>
 
     <!-- SCRIPT -->
     <script src="./js/script.js"></script>
+    <script src="/js/vanilla-tilt.js"></script>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+
+        <!-- Swiper JS -->
+      <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+      <!--video js-->
+      <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
+
+      <!--particle.js-->
+      <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> <!-- stats.js lib -->
+      <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+  
+      <!-- Initialize Swiper -->
+      <script>
+        var swiper = new Swiper(".mySwiper", {
+          effect: "coverflow",
+          grabCursor: true,
+          centeredSlides: true,
+          slidesPerView: "auto",
+          coverflowEffect: {
+            rotate: 50,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            slideShadows: true,
+          },
+          pagination: {
+            el: ".swiper-pagination",
+          },
+        });
+      </script>
 </body>
 
 </html>
