--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                 <!--data-tilt-glare data-tilt-max-glare="0.2"-->
                 <img class="tamano" src="./images/itachi_oficial_cortado.png" alt="fondo" id="Itachi">
                 <div class="tarjeta-itachi sombra-tarjeta">
-                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing.</p>
+                  <p style="align-items: left;"><b>Blender 3D</b></p>
+                  <p style="align-items: left;">Uchiha Itachi. Modelado estilo cartoon (anime) realizado en Blender 3D</p>
                 </div>
             </div>
         </div>
@@ -128,8 +129,8 @@
                     <ion-icon name="code" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
                     <div class="card-body">
                       <h5 class="card-title efecto-3d">Desarrollo Web</h5>
-                      <p class="card-text efecto-3d" style="font-size: 12px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Go somewhere</a>
+                      <p class="card-text efecto-3d" style="font-size: 12px;">Desarrollo de paginas web Front-End enfocado al diseño</p>
+                      <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                     </div>
                   </div>
             </div>
@@ -138,8 +139,8 @@
                     <ion-icon name="game-controller" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
                     <div class="card-body">
                         <h5 class="card-title efecto-3d">Unity</h5>
-                        <p class="card-text efecto-3d" style="font-size: 12px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Go somewhere</a>
+                        <p class="card-text efecto-3d" style="font-size: 12px;">Desarrollador de videojuegos en el motor Unity</p>
+                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                       </div>
                   </div>
             </div>
@@ -148,8 +149,8 @@
                     <ion-icon name="analytics" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
                     <div class="card-body">
                         <h5 class="card-title efecto-3d">Modelado en 3D</h5>
-                        <p class="card-text efecto-3d" style="font-size: 12px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Go somewhere</a>
+                        <p class="card-text efecto-3d" style="font-size: 12px;">Desarrollo de modelados en 3D, en Blender</p>
+                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                       </div>
                   </div>
             </div>
@@ -158,8 +159,8 @@
                     <ion-icon name="color-palette" class="card-img-top tamano-iconos efecto-3d pt-2" alt="..."></ion-icon>
                     <div class="card-body">
                         <h5 class="card-title efecto-3d">UI/UX</h5>
-                        <p class="card-text efecto-3d" style="font-size: 12px;">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Go somewhere</a>
+                        <p class="card-text efecto-3d" style="font-size: 12px;">Diseñador UI/UX de interfaces de usuario</p>
+                        <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                       </div>
                   </div>
             </div>
