--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <ion-icon name="color-palette" class="card-img-top tamano-iconos efecto-3d pt-2" alt="..."></ion-icon>
                     <div class="card-body">
                         <h5 class="card-title efecto-3d">UI/UX</h5>
-                        <p class="card-text efecto-3d" style="font-size: 12px;">Diseñador UI/UX de interfaces de usuario</p>
+                        <p class="card-text efecto-3d" style="font-size: 12px;">Diseñador de interfaces y experiencias de usuario</p>
                         <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                       </div>
                   </div>
@@ -214,14 +214,12 @@
         <!-- Swiper -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="/images/portafolio-img/fondo_muneca.png" />
-          </div>
+          
           <div class="swiper-slide">
             <img src="/images/portafolio-img/itachivolumetrico.png" />
           </div>
           <div class="swiper-slide">
-            <video id="my-video" class="video-js" controls preload="auto" poster="/images/portafolio-img/itachiultimo1.png" data-setup="{}">
+            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="/images/portafolio-img/itachiultimo1.png" data-setup="{}">
                 <source src="/images/portafolio-video/itachiVideo.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
@@ -232,12 +230,70 @@
             </video>
           </div>
           <div class="swiper-slide">
+            <img src="/images/portafolio-img/fondo_muneca.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/gangs.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/Perforador-Final.png" />
+          </div>
+          <div class="swiper-slide">
             <img src="/images/portafolio-img/interfaz1.png" />
           </div>
           <div class="swiper-slide">
             <img src="/images/portafolio-img/interfaz4.png" />
           </div>
-          
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/ciberInfantilMesa.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/1.png" />
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="/images/portafolio-img/Orangutan-caminado.png" data-setup="{}">
+                <source src="/images/portafolio-video/Orangutan-Caminando.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+                <source src="/images/portafolio-video/Escopetazo-Particula-Cartoon.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+                <source src="/images/portafolio-video/Rocket.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+                <source src="/images/portafolio-video/Salto.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
