--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             </video>
           </div>
           <div class="swiper-slide">
+            <img src="/images/portafolio-img/arbolrogoso.png" />
+          </div>
+          <div class="swiper-slide">
             <img src="/images/portafolio-img/arbolcartoon.png" />
           </div>
           <div class="swiper-slide">
