--- a/index.html
+++ b/index.html
@@ -238,7 +238,10 @@
             <img src="/images/portafolio-img/arbolcartoon.png" />
           </div>
           <div class="swiper-slide">
-            <img src="/images/portafolio-img/fondo_muneca.png" />
+            <img src="/images/portafolio-img/arbolcartoon.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/escudo.png" />
           </div>
           <div class="swiper-slide">
             <img src="/images/portafolio-img/gangs.png" />
