--- a/index.html
+++ b/index.html
@@ -241,6 +241,12 @@
             <img src="/images/portafolio-img/escudo.png" />
           </div>
           <div class="swiper-slide">
+            <img src="/images/portafolio-img/fondo_muneca.png" />
+          </div>
+          <div class="swiper-slide">
+            <img src="/images/portafolio-img/Rhaenyra.png" />
+          </div>
+          <div class="swiper-slide">
             <img src="/images/portafolio-img/gangs.png" />
           </div>
           <div class="swiper-slide">
