--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
         }
 
         .tamano-video{
-          width: "500";
-          height: "250";
+          width: "100px";
+          height: "50px";
         }
 
         }
@@ -218,7 +218,7 @@
         <div class="swiper-wrapper">
           
           <div class="swiper-slide">
-            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="/images/portafolio-img/itachiultimo1.png" data-setup="{}">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="/images/portafolio-img/itachiultimo1.png" data-setup="{}">
                 <source src="/images/portafolio-video/itachiVideo.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
