--- a/index.html
+++ b/index.html
@@ -229,25 +229,13 @@
             </video>
           </div>
           <div class="swiper-slide">
-            <img src="/images/portafolio-img/arbolrogoso.png" />
+            <img src="/images/portafolio-img/arboles-edicion.jpg" />
           </div>
           <div class="swiper-slide">
-            <img src="/images/portafolio-img/arbolcartoon.png" />
+            <img src="/images/portafolio-img/itachi-edicion.jpg" />
           </div>
           <div class="swiper-slide">
-            <img src="/images/portafolio-img/fondo_muneca.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="/images/portafolio-img/Rhaenyra.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="/images/portafolio-img/gangs.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="/images/portafolio-img/Perforador-Final.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="/images/portafolio-img/interfaz1.png" />
+            <img src="/images/portafolio-img/low-poly-items.jpg" />
           </div>
           <div class="swiper-slide">
             <img src="/images/portafolio-img/interfaz4.png" />
