--- a/index.html
+++ b/index.html
@@ -216,10 +216,20 @@
         <!-- Swiper -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          
           <div class="swiper-slide">
             <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="/images/portafolio-img/itachiultimo1.png" data-setup="{}">
                 <source src="/images/portafolio-video/itachiVideo.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+                <source src="/images/portafolio-video/pixelyanime.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
                 web browser that
@@ -244,7 +254,7 @@
             <img src="/images/portafolio-img/1.png" />
           </div>
           <div class="swiper-slide">
-            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
                 <source src="/images/portafolio-video/Escopetazo-Particula-Cartoon.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
@@ -255,7 +265,7 @@
             </video>
           </div>
           <div class="swiper-slide">
-            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
                 <source src="/images/portafolio-video/Rocket.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
@@ -266,7 +276,7 @@
             </video>
           </div>
           <div class="swiper-slide">
-            <video id="my-video" class="video-js tamano-video" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
                 <source src="/images/portafolio-video/Salto.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
