--- a/index.html
+++ b/index.html
@@ -228,6 +228,17 @@
             </video>
           </div>
           <div class="swiper-slide">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" data-setup="{}">
+                <source src="/images/portafolio-video/videofiverr.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
             <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" poster="" data-setup="{}">
                 <source src="/images/portafolio-video/pixelyanime.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
