--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 
         <!--slot 1-->
 
-        <div class="slot1 posicion-itachi text-center">
+        <!--<div class="slot1 posicion-itachi text-center">
             <div class="posicion-itachi" data-tilt data-tilt-reverse="true" data-tilt-scale="1.1" id="itachi">
-                <!--data-tilt-glare data-tilt-max-glare="0.2"-->
+                linea mala data-tilt-glare data-tilt-max-glare="0.2"
                 <img class="tamano" src="./images/itachi_oficial_cortado.png" alt="fondo" id="Itachi">
                 <div class="tarjeta-itachi sombra-tarjeta">
                   <p style="align-items: left;"><b>Blender 3D</b></p>
                   <p style="align-items: left;">Itachi Uchiha. Modelado estilo cartoon (anime) realizado en Blender 3D</p>
                 </div>
             </div>
-        </div>
+        </div>-->
 
         <!--slot 2-->
 
