--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <ion-icon name="code" class="card-img-top tamano-iconos efecto-3d" alt="..."></ion-icon>
                     <div class="card-body">
                       <h5 class="card-title efecto-3d">Desarrollo Web</h5>
-                      <p class="card-text efecto-3d" style="font-size: 12px;">Desarrollo de paginas web Front-End enfocado al diseño</p>
+                      <p class="card-text efecto-3d" style="font-size: 12px;">Desarrollador de páginas web enfocado en el Front-End</p>
                       <a href="#cuarto" class="btn btn-primary efecto-3d" style="font-size: 15px;">Portafolio</a>
                     </div>
                   </div>
@@ -230,6 +230,17 @@
           <div class="swiper-slide">
             <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" data-setup="{}">
                 <source src="/images/portafolio-video/videofiverr.mp4" type="video/mp4" />
+                <p class="vjs-no-js">
+                To view this video please enable JavaScript, and consider upgrading to a
+                web browser that
+                <a href="https://videojs.com/html5-video-support/" target="_blank"
+                    >supports HTML5 video</a>
+                </p>
+            </video>
+          </div>
+          <div class="swiper-slide">
+            <video id="my-video" class="video-js vjs-16-9" controls width="1000" height="500" preload="auto" data-setup="{}">
+                <source src="/images/portafolio-video/unido.mp4" type="video/mp4" />
                 <p class="vjs-no-js">
                 To view this video please enable JavaScript, and consider upgrading to a
                 web browser that
